--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <p class="text-gray-300 mb-4 h-12 overflow-hidden">
                             Código de la primera clase de programación.
                         </p>
-                        <a href="C:\Users\Guillermo\Documents\C++\PRIMERA CLASE 4TO BACH.cpp" target="_blank" download
+                        <a href="codigos/PRIMERA CLASE 4TO BACH.cpp" target="_blank" download
                            class="inline-flex items-center px-6 py-2 text-md font-semibold text-white rounded-full transition-all duration-300 btn-primary hover:bg-blue-600">
                             <i data-lucide="download" class="w-5 h-5 mr-2"></i>
                             Descargar Código
@@ -166,7 +166,7 @@
                         <p class="text-gray-300 mb-4 h-12 overflow-hidden">
                             Fragmento de código de prueba o ejemplo.
                         </p>
-                        <a href="C:\Users\Guillermo\Documents\C++\soytupapi.cpp" target="_blank" download
+                        <a href="codigos/soytupapi.cpp" target="_blank" download
                            class="inline-flex items-center px-6 py-2 text-md font-semibold text-white rounded-full transition-all duration-300 btn-primary hover:bg-blue-600">
                             <i data-lucide="download" class="w-5 h-5 mr-2"></i>
                             Descargar Código
@@ -184,7 +184,7 @@
                         <p class="text-gray-300 mb-4 h-12 overflow-hidden">
                             Código relacionado con una compañera/trabajo en equipo.
                         </p>
-                        <a href="C:\Users\Guillermo\Documents\C++\codigo de adriana.cpp" target="_blank" download
+                        <a href="codigos/codigo de adriana.cpp" target="_blank" download
                            class="inline-flex items-center px-6 py-2 text-md font-semibold text-white rounded-full transition-all duration-300 btn-primary hover:bg-blue-600">
                             <i data-lucide="download" class="w-5 h-5 mr-2"></i>
                             Descargar Código
@@ -202,7 +202,7 @@
                         <p class="text-gray-300 mb-4 h-12 overflow-hidden">
                             Ejemplos o ejercicios sobre bucles `for` y `while`.
                         </p>
-                        <a href="C:\Users\Guillermo\Documents\Dev-Cpp\for-while.cpp" target="_blank" download
+                        <a href="codigos/for-while.cpp" target="_blank" download
                            class="inline-flex items-center px-6 py-2 text-md font-semibold text-white rounded-full transition-all duration-300 btn-primary hover:bg-blue-600">
                             <i data-lucide="download" class="w-5 h-5 mr-2"></i>
                             Descargar Código
@@ -220,7 +220,7 @@
                         <p class="text-gray-300 mb-4 h-12 overflow-hidden">
                             Programa para determinar el número mayor y menor.
                         </p>
-                        <a href="C:\Users\Guillermo\Documents\Dev-Cpp\mayor y menor.cpp" target="_blank" download
+                        <a href="codigos/mayor y menor.cpp" target="_blank" download
                            class="inline-flex items-center px-6 py-2 text-md font-semibold text-white rounded-full transition-all duration-300 btn-primary hover:bg-blue-600">
                             <i data-lucide="download" class="w-5 h-5 mr-2"></i>
                             Descargar Código
@@ -238,7 +238,7 @@
                         <p class="text-gray-300 mb-4 h-12 overflow-hidden">
                             Simulación de un sistema bancario básico.
                         </p>
-                        <a href="C:\Users\Guillermo\Documents\Dev-Cpp\BANCO CBC.cpp" target="_blank" download
+                        <a href="codigos/BANCO CBC.cpp" target="_blank" download
                            class="inline-flex items-center px-6 py-2 text-md font-semibold text-white rounded-full transition-all duration-300 btn-primary hover:bg-blue-600">
                             <i data-lucide="download" class="w-5 h-5 mr-2"></i>
                             Descargar Código
@@ -256,7 +256,7 @@
                         <p class="text-gray-300 mb-4 h-12 overflow-hidden">
                             Función de validación de contraseña para un sistema bancario.
                         </p>
-                        <a href="C:\Users\Guillermo\Documents\Dev-Cpp\CONTRASEÑA DE BANCO.cpp" target="_blank" download
+                        <a href="codigos/CONTRASEÑA DE BANCO.cpp" target="_blank" download
                            class="inline-flex items-center px-6 py-2 text-md font-semibold text-white rounded-full transition-all duration-300 btn-primary hover:bg-blue-600">
                             <i data-lucide="download" class="w-5 h-5 mr-2"></i>
                             Descargar Código
@@ -264,8 +264,8 @@
                     </div>
                     
                 </div>
-                <p class="mt-12 text-sm text-yellow-500">
-                    ⚠️ **Aviso Importante:** Las rutas de archivo (`C:\Users\...`) son locales. **Solo funcionarán si el portafolio se abre en tu computadora**. Para publicarlo en internet, debes subir los archivos C++ y usar rutas relativas o enlaces de la nube.
+                <p class="mt-12 text-sm text-gray-500">
+                    *Archivos cargados desde la carpeta local **`codigos/`**.
                 </p>
                 
             </div>
