--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
                     Documentos de Proyecto
                 </h2>
                 <h3 class="text-xl md:text-2xl font-normal text-center mb-10 text-gray-400 mt-4">
-                    Visualización directa desde el repositorio de GitHub.
+                    Visualización de código en la página de GitHub.
                 </h3>
                 
                 <p class="text-lg text-gray-400 mb-12 max-w-4xl mx-auto">
-                    Haz clic en "Ver Documento" para abrir el contenido de texto en una nueva pestaña (enlace RAW de GitHub).
+                    Haz clic en "Ver Documento" para abrir la página del archivo en GitHub.
                 </p>
 
                 <div class="grid md:grid-cols-4 gap-8 max-w-7xl mx-auto">
@@ -146,10 +146,10 @@
                             </div>
                         </div>
                         <p class="text-gray-300 mb-4 h-12 overflow-hidden">
-                            Enlace directo a la versión cruda del archivo en el repositorio de GitHub.
+                            Código C++ alojado en un repositorio.
                         </p>
                         
-                        <a href="https://raw.githubusercontent.com/guillermovicente23/EJERCICIO-5/main/EJERCICIO%20%235.txt" target="_blank"
+                        <a href="https://github.com/guillermovicente23/EJERCICIO-5/blob/main/EJERCICIO%20%235.txt" target="_blank"
                            class="inline-flex items-center px-6 py-2 text-md font-semibold text-white rounded-full transition-all duration-300 btn-primary hover:bg-blue-600">
                             <i data-lucide="eye" class="w-5 h-5 mr-2"></i>
                             Ver Documento
@@ -167,7 +167,7 @@
                         <p class="text-gray-300 mb-4 h-12 overflow-hidden">
                             Documentación sobre la simulación de un sistema bancario básico.
                         </p>
-                        <a href="URL_RAW_DE_BANCO_CBC_AQUI" target="_blank"
+                        <a href="URL_PAGINA_GITHUB_DE_BANCO_CBC_AQUI" target="_blank"
                            class="inline-flex items-center px-6 py-2 text-md font-semibold text-white rounded-full transition-all duration-300 btn-primary hover:bg-blue-600">
                             <i data-lucide="eye" class="w-5 h-5 mr-2"></i>
                             Ver Documento
@@ -185,7 +185,7 @@
                         <p class="text-gray-300 mb-4 h-12 overflow-hidden">
                             Documentación sobre la función de validación de contraseña.
                         </p>
-                        <a href="URL_RAW_DE_CONTRASEÑA_DE_BANCO_AQUI" target="_blank"
+                        <a href="URL_PAGINA_GITHUB_DE_CONTRASEÑA_DE_BANCO_AQUI" target="_blank"
                            class="inline-flex items-center px-6 py-2 text-md font-semibold text-white rounded-full transition-all duration-300 btn-primary hover:bg-blue-600">
                             <i data-lucide="eye" class="w-5 h-5 mr-2"></i>
                             Ver Documento
@@ -203,7 +203,7 @@
                         <p class="text-gray-300 mb-4 h-12 overflow-hidden">
                             Texto relacionado con un trabajo en equipo o colaboración.
                         </p>
-                        <a href="URL_RAW_DE_CODIGO_DE_ADRIANA_AQUI" target="_blank"
+                        <a href="URL_PAGINA_GITHUB_DE_CODIGO_DE_ADRIANA_AQUI" target="_blank"
                            class="inline-flex items-center px-6 py-2 text-md font-semibold text-white rounded-full transition-all duration-300 btn-primary hover:bg-blue-600">
                             <i data-lucide="eye" class="w-5 h-5 mr-2"></i>
                             Ver Documento
