--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="flex flex-col items-center">
                 
                 <div class="mb-8">
-                    <img src="GUILLERMO.jpeg" alt="Guillermo Vicente - Perfil" 
+                    <img src="GUILLERMO.JPG" alt="Guillermo Vicente - Perfil" 
                          class="w-48 h-48 md:w-64 md:h-64 rounded-full object-contain border-4 border-primary-blue shadow-2xl transition-transform duration-500 hover:scale-105">
                 </div>
                 <h1 class="text-4xl md:text-6xl font-extrabold mb-4 leading-tight text-text-light">
